GNOME Bugzilla – Bug 685860
Critical warning for "Unsupported type guint32"
Last modified: 2012-10-11 14:09:18 UTC
_pygi_hash_pointer_to_arg() does not handle guint32. =============
+ Trace 231005
Fix should be trivial, but please let me know if a patch is welcome.
Thanks for spotting! This was indeed a glaring oversight. I added test API for this to g-i, also to the gnome-3-6 branch: http://git.gnome.org/browse/gobject-introspection/commit/?id=5287a96a48c487866994353de9d1ac96b98f16e3 pygobject fixed in http://git.gnome.org/browse/pygobject/commit/?id=8a2e96cd4e33b6c119a368d73a9d5504576cdccb will be in 3.4.1.