Fix unsigned values in GArray/GList/GSList/GHash

_pygi_hash_pointer_to_arg() needs to handle unsigned integers as well.

https://bugzilla.gnome.org/show_bug.cgi?id=685860